@@ -105,8 +105,12 @@ public:
 	bool	CreateFromFile(wxString WXUNUSED(directory), wxString WXUNUSED(filename), void* WXUNUSED(pvProgressParam)) {return false;}// not supported in this class
 	virtual bool LoadFromFile(const CFileDataIO* WXUNUSED(file)) { return false; }
 	bool	WriteToFile(CFileDataIO* WXUNUSED(file))	{ return false; }
-	bool	IsPartFile() const		{ return !(status == PS_COMPLETE); }
-	bool	IsCPartFile() const		{ return true; }
+
+	// virtual functions for CKnownFile and CPartFile:
+	bool	IsPartFile() const		{ return status != PS_COMPLETE; }	// true if not completed
+	bool	IsCompleted() const		{ return status == PS_COMPLETE; }	// true if completed
+	bool	IsCPartFile() const		{ return true; }					// true if it's a CPartFile
+
 	uint32	Process(uint32 reducedownload, uint8 m_icounter);
 	uint8	LoadPartFile(const CPath& in_directory, const CPath& filename, bool from_backup = false, bool getsizeonly = false);
 	bool	SavePartFile(bool Initial = false);
@@ -198,6 +202,7 @@ public:
 	
 	uint8	GetCategory() const { return m_category; }
 	void	SetCategory(uint8 cat);
+	void	RemoveCategory(uint8 cat);
 
 	volatile bool m_bPreviewing;
 	void	SetDownPriority(uint8 newDownPriority, bool bSave = true, bool bRefresh = true);
